Wed Aug  9 11:42:36 1995  Jeffrey A. Law  <law@rtl.cygnus.com>

	 * configure.in (powerpc-*-aix*): Recognize as a new gdb host
	 and target.
	 (powerpc-*-eabi*): Don't set configdirs.
	 (powerpcle-*-eabi*): Likewise.
	 * configure: Updated.
	 * rs6000-nat.c (vmap_ldinfo): Don't relocate data addresses
	 for the main objfile if DONT_RELOCATE_SYMFILE_OBJFILE is
	 defined.
	 * config/powerpc/{aix.mh,aix.mh}: Host and target makefile fragments
	 for powerpc running aix4.
	 * config/powerpc/{nm-aix.h, tm-ppc-aix.h, xm-aix.h}: Native, target
	 and host include files for powerpc running aix4.

Wed Aug  9 08:11:45 1995  Stan Shebs  <shebs@cygnus.com>

	* top.c (target_output_hook): Really make it match defs.h (char *
	is not the same as unsigned char *).

Tue Aug  8 15:13:05 1995  J.T. Conklin  <jtc@rtl.cygnus.com>

	* Makefile.in (CXX_FOR_TARGET): Don't use ${rootme}/../gcc/xgcc
	unless it is present.

Tue Aug  8 10:50:15 1995  Jeffrey A. Law  <law@rtl.cygnus.com>

	* top.c (target_output_hook): Make declaration match the one
	in defs.h.

	* symfile.c (add_psymbol_to_list): Initialize SYMBOL_SECTION.
	(add_psymbol_addr_to_list): Likewise.
	* symfile.h (ADD_PSYMBOL_VT_TO_LIST): Likewise.

Mon Aug  7 15:34:29 1995  steve chamberlain  <sac@slash.cygnus.com>

	* top.c (target_output_hook): New definition.
	* stack.c (gdb_string.h): Include after defs.h
	* defs.h (target_output_hook): New declaration.
	* source.c (mod_path): Fix Win32 \ handling.

Sun Aug  6 22:14:25 1995  Jeff Law  (law@snake.cs.utah.edu)

	* hppa-tdep.c (frame_saved_pc): Don't try to dig a return pointer
	out of a long branch stub.

Fri Aug  4 13:37:31 1995  Jeffrey A. Law  <law@rtl.cygnus.com>

	* xcoffread.c (process_linenos): Fix typo in last change.

Thu Aug  3 22:01:26 1995  Fred Fish  <fnf@rtl.cygnus.com>

	* ch-exp.y (write_lower_upper_value):  Add prototype so bison
	generated parser will insert prototype before first func usage.
	Bison and byacc order the output sections differently.  Also